--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.110'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
