--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.0'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
 	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.16.0'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
 	implementation group: 'org.springframework.security', name: 'spring-security-web', version: '6.2.1'
@@ -46,8 +47,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
-	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.110'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
